Kubernetes/zip/java.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: javaapp
    #  namespace: test-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: java
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 2
      maxSurge: 1
  minReadySeconds: 60
  template:
    metadata:
      labels:
        app: java
    spec:
      imagePullSecrets:
        - name: dockerregcred
      containers:
        - name: javacontainer
          image: ashoknagari/javawebapp:10
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 200m
              memory: 500Mi
            limits:
              cpu: 300m
              memory: 500Mi
          livenessProbe:
            httpGet:
              path: /java-web-app/
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 30
          readinessProbe:
            httpGet:
              path: /java-web-app/
              port: 8080
