Kubernetes/zip/mven.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maven
  namespace: maven
spec:
  replicas: 2
  selector:
    matchLabels:
      app: maven
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 2
      maxSurge: 1
  minReadySeconds: 60
  template:
    metadata:
      labels:
        app: maven
    spec:
      imagePullSecrets:
        - name: dockerregcred
      containers:
        - name: maven
          image: ashoknagari/maven-web-application:1
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 200m
              memory: 500Mi
            limits:
              cpu: 300m
              memory: 500Mi
                # livenessProbe:
            # httpGet:
              # path: /maven-web-app/
                # port: 8081
                # initialDelaySeconds: 60
              # periodSeconds: 20
              #  timeoutSeconds: 30
              # readinessProbe:
            # httpGet:
              # path: /maven-web-app/
                # port: 8081
