Kubernetes/zip/spring1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springapp
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 2
      maxSurge: 2
  minReadySeconds: 60
  selector:
    matchLabels:
      app: springapp
  template:
    metadata:
      labels:
        app: springapp
    spec:
      containers:
        - name: springcontainer
          image: dockerhandson/spring-boot-mongo:1
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: springsvc
spec:
  type: NodePort
  selector:
    app: springapp
  ports:
    - port: 80
      targetPort: 8080
