Kubernetes/zip/maven-web-latest.yml
apiVersion: v1
kind: Service
metadata:
  name: mavenwebappservice
spec:
  type: ClusterIP
  selector:
    app: mavenwebapp
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: mavenwebappds
spec:
  selector:
    matchLabels:
      app: mavenwebapp
  template:
    metadata:
      labels:
        app: mavenwebapp
    spec:
      containers:
      - name: mavenwebapp
        image: dockerhandson/maven-web-app:1
        ports:
        - containerPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource-1
spec:
  ingressClassName: nginx
  rules:
    - host: mavenwebapp.mvenkatrao.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: mavenwebappservice
              port:
                number: 80
